pwt-macros/tests/widget/wrong_crate.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `wrong`
  --> tests/widget/wrong_crate.rs:34:14
   |
34 | #[widget(pwt=wrong, comp=Foo, @input, @element)]
   |              ^^^^^ use of unresolved module or unlinked crate `wrong`
   |
   = help: if you wanted to use a crate named `wrong`, use `cargo add wrong` to add it to your `Cargo.toml`
